fixed splash scrollbar

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -166,13 +166,3 @@ h1,
     text-align:center !important;
     align-items:center !important;
 }
-
-.stockPriceChartSizing{
-    padding-bottom: 1rem;
-}
-
-@media only screen and (min-width: 1200px) {
-    .stockPriceChartSizing{
-        padding: 3rem;
-    }
-}
